--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -59,16 +59,16 @@
       <div class="container">
         <div class="row no-gutters align-items-center justify-content-between"><a class="site-logo__wrapper" href="/"><img class="site-logo__img" src="images/logo/logo.png" alt="#MA - Logo strony internetowej" width="94" height="28"></a>
           <h1 class="text-hidden">#Mateusz Archiciński</h1>
-          <button class="side-nav__button-toggle site-nav__button-toggle side-nav-toggle-js" aria-label="Side navigation toggle button"><span class="icon icon-2 icon-menu color-white"></span></button>
+          <button class="side-nav__button-toggle side-nav-toggle-js" aria-label="Side navigation toggle button"><span class="icon icon-2 icon-menu color-white"></span></button>
           <nav class="site-nav-wrapper">
-            <ul class="row site-nav__list">
+            <ul class="site-nav__list">
               <li><a class="site-nav__link active" href="#home" data-spy>Strona główna</a></li>
               <li><a class="site-nav__link" href="#about-me" data-spy>O mnie</a></li>
               <li><a class="site-nav__link" href="#services" data-spy>Usługi</a></li>
               <li><a class="site-nav__link" href="#portfolio" data-spy>Portfolio</a></li>
               <li><a class="site-nav__link" href="#contact" data-spy>Kontakt</a></li>
               <li>
-                <ul class="row language-settings__list language-settings-separator-left">
+                <ul class="language-settings__list language-settings-separator-left">
                   <li><a class="site-nav__link language-settings__link" href="/en">en</a></li>
                 </ul>
               </li>
@@ -80,15 +80,15 @@
     <nav class="side-nav-wrapper side-nav-js">
       <button class="side-nav__button-toggle side-nav-toggle-js" aria-label="Side navigation toggle button"><span class="icon icon-2 icon-cancel color-primary-dark"></span></button>
       <div class="side-nav-overlay">
-        <ul class="row flex-column flex-nowrap align-content-center align-items-center justify-content-center side-nav__list site-nav__list">
-          <li><a class="site-nav__link active" href="#home" data-spy>Strona główna</a></li>
-          <li><a class="site-nav__link" href="#about-me" data-spy>O mnie</a></li>
-          <li><a class="site-nav__link" href="#services" data-spy>Usługi</a></li>
-          <li><a class="site-nav__link" href="#portfolio" data-spy>Portfolio</a></li>
-          <li><a class="site-nav__link" href="#contact" data-spy>Kontakt</a></li>
+        <ul class="side-nav__list">
+          <li><a class="side-nav__link active" href="#home" data-spy>Strona główna</a></li>
+          <li><a class="side-nav__link" href="#about-me" data-spy>O mnie</a></li>
+          <li><a class="side-nav__link" href="#services" data-spy>Usługi</a></li>
+          <li><a class="side-nav__link" href="#portfolio" data-spy>Portfolio</a></li>
+          <li><a class="side-nav__link" href="#contact" data-spy>Kontakt</a></li>
           <li>
-            <ul class="row language-settings__list language-settings-separator-top">
-              <li><a class="site-nav__link language-settings__link" href="/en">en</a></li>
+            <ul class="language-settings__list language-settings-separator-top">
+              <li><a class="side-nav__link language-settings__link" href="/en">en</a></li>
             </ul>
           </li>
         </ul>
@@ -106,7 +106,7 @@
                 <div class="heading-separator__line accent"></div>
               </div>
               <h3 class="heading heading-3 text-center color-white home-header-subtitle">Mateusz Archiciński</h3>
-              <div class="home-header-buttons"><a class="btn to-top btn-accent color-white" href="#about-me">Poznaj mnie</a><a class="btn to-top btn-primary-dark color-white" href="#services">Usługi</a>
+              <div class="home-header-buttons"><a class="btn to-top btn-accent color-white" href="#about-me"><span class="display-none display-sm-block">Poznaj mnie</span><span class="display-block display-sm-none icon icon-125 icon-user"></span></a><a class="btn to-top btn-primary-dark color-white" href="#services"><span class="display-none display-sm-block">Usługi</span><span class="display-block display-sm-none icon icon-125 icon-wrench"></span></a>
                 <div class="home-header-buttons-bottom"><a class="btn btn-round to-top color-white" href="#about-me" aria-label="Przejdz do sekcji o mnie"><span class="icon icon-125 icon-down-open-1" aria-hidden="true"></span></a></div>
               </div>
             </header>
@@ -297,50 +297,48 @@
               <p class="section-header-description">Sprawdź co mogę ci zaoferować.</p>
             </header>
           </div>
-          <div class="row">
-            <div class="col-12">
-              <div class="owl-carousel owl-theme owl-carousel-services owl-carousel-services-js">
-                <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-website services-item-icon" aria-hidden="true"></span>
-                  <h3 class="heading heading-4 services-item-title">Kodowanie PSD do HTML/CSS/JS</h3>
-                  <div class="heading-separator">
-                    <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
-                  </div>
-                  <p class="paragraph services-item-description">Pocięcie i zakodowanie do HTML5, CSS3 i JavaScript dostarczonego projektu graficznego strony internetowej, mailingu, szablonu WordPress i innych.</p>
-                  <button class="btn to-top btn-primary services-item-button" type="button"><span>Więcej</span></button>
-                </div>
-                <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-devices services-item-icon" aria-hidden="true"></span>
-                  <h3 class="heading heading-4 services-item-title">Dostosowanie do różnych przeglądarek i urządzeń</h3>
-                  <div class="heading-separator">
-                    <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
-                  </div>
-                  <p class="paragraph services-item-description">Dostosowanie strony internetowej do wybranych przeglądarek i urządzeń mobilnych z uwzględnieniem różnych rozdzielczości (tzw. Responsive Web Design).</p>
-                  <button class="btn to-top btn-primary services-item-button" type="button"><span>Więcej</span></button>
-                </div>
-                <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-admin services-item-icon" aria-hidden="true"></span>
-                  <h3 class="heading heading-4 services-item-title">Administracja stron internetowych</h3>
-                  <div class="heading-separator">
-                    <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
-                  </div>
-                  <p class="paragraph services-item-description">Wdrożenie i utrzymanie strony/aplikacji internetowej w tym okresowe raporty z testów automatycznych i manualnych wybranych funkcjonalności.</p>
-                  <button class="btn to-top btn-primary services-item-button" type="button"><span>Więcej</span></button>
-                </div>
-                <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-spa services-item-icon" aria-hidden="true"></span>
-                  <h3 class="heading heading-4 services-item-title">SPA / Aplikacje internetowe</h3>
-                  <div class="heading-separator">
-                    <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
-                  </div>
-                  <p class="paragraph services-item-description">Tworzenie całej warstwy klienta aplikacji internetowej lub wybranych komponentów w oparciu <br>o framework AngularJS, HTML5, CSS3, ES6/TypeScript.</p>
-                  <button class="btn to-top btn-primary services-item-button" type="button"><span>Więcej</span></button>
-                </div>
-                <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-api services-item-icon" aria-hidden="true"></span>
-                  <h3 class="heading heading-4 services-item-title">API / Interfejsy programowania aplikacji</h3>
-                  <div class="heading-separator">
-                    <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
-                  </div>
-                  <p class="paragraph services-item-description">Tworzenie całej warstwy serwera lub wybranych usług zapewniających dostęp do zasobów serwera za pośrednictwem protokołu HTTP <br>w oparciu o framework Express.</p>
-                  <button class="btn to-top btn-primary services-item-button" type="button"><span>Więcej</span></button>
-                </div>
+        </div>
+        <div class="services-container">
+          <div class="owl-carousel owl-theme owl-carousel-services owl-carousel-services-js">
+            <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-website services-item-icon" aria-hidden="true"></span>
+              <h3 class="heading heading-4 services-item-title">Kodowanie PSD do HTML/CSS/JS</h3>
+              <div class="heading-separator">
+                <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
               </div>
+              <p class="paragraph services-item-description">Pocięcie i zakodowanie do HTML5, CSS3 i JavaScript dostarczonego projektu graficznego strony internetowej, mailingu, szablonu WordPress i innych.</p>
+              <button class="btn to-top btn-primary services-item-button" type="button"><span>Więcej</span></button>
+            </div>
+            <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-devices services-item-icon" aria-hidden="true"></span>
+              <h3 class="heading heading-4 services-item-title">Dostosowanie do różnych przeglądarek i urządzeń</h3>
+              <div class="heading-separator">
+                <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
+              </div>
+              <p class="paragraph services-item-description">Dostosowanie strony internetowej do wybranych przeglądarek i urządzeń mobilnych z uwzględnieniem różnych rozdzielczości (tzw. Responsive Web Design).</p>
+              <button class="btn to-top btn-primary services-item-button" type="button"><span>Więcej</span></button>
+            </div>
+            <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-admin services-item-icon" aria-hidden="true"></span>
+              <h3 class="heading heading-4 services-item-title">Administracja stron internetowych</h3>
+              <div class="heading-separator">
+                <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
+              </div>
+              <p class="paragraph services-item-description">Wdrożenie i utrzymanie strony/aplikacji internetowej w tym okresowe raporty z testów automatycznych i manualnych wybranych funkcjonalności.</p>
+              <button class="btn to-top btn-primary services-item-button" type="button"><span>Więcej</span></button>
+            </div>
+            <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-spa services-item-icon" aria-hidden="true"></span>
+              <h3 class="heading heading-4 services-item-title">SPA / Aplikacje internetowe</h3>
+              <div class="heading-separator">
+                <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
+              </div>
+              <p class="paragraph services-item-description">Tworzenie całej warstwy klienta aplikacji internetowej lub wybranych komponentów w oparciu <br>o framework AngularJS, HTML5, CSS3, ES6/TypeScript.</p>
+              <button class="btn to-top btn-primary services-item-button" type="button"><span>Więcej</span></button>
+            </div>
+            <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-api services-item-icon" aria-hidden="true"></span>
+              <h3 class="heading heading-4 services-item-title">API / Interfejsy programowania aplikacji</h3>
+              <div class="heading-separator">
+                <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
+              </div>
+              <p class="paragraph services-item-description">Tworzenie całej warstwy serwera lub wybranych usług zapewniających dostęp do zasobów serwera za pośrednictwem protokołu HTTP <br>w oparciu o framework Express.</p>
+              <button class="btn to-top btn-primary services-item-button" type="button"><span>Więcej</span></button>
             </div>
           </div>
         </div>
