--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -97,7 +97,7 @@
     <main class="main-wrapper">
       <section class="section home-wrapper header-wrapper-js" id="home">
         <div class="container">
-          <div class="row no-gutters align-items-center justify-content-center home-row">
+          <div class="row align-items-center justify-content-center home-row">
             <header class="home-header">
               <h2 class="heading heading-1 text-center color-white home-header-title">Front-End Developer</h2>
               <div class="heading-separator">
@@ -377,7 +377,7 @@
                 </li>
               </ul>
               <div class="row portfolio-items portfolio-items-js">
-                <div class="portfolio-item col-xl-4 col-lg-4 col-md-6 col-sm-6" data-type="websites">
+                <div class="col-lg-4 col-md-6 col-12 portfolio-item" data-type="websites">
                   <figure class="portfolio-item__figure" tabindex="0"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img WEBSITE">
                     <figcaption class="portfolio-item__figcaption text-center">
                       <h3 class="heading heading-5 portfolio-item-title">Strona WEBSITE</h3>
@@ -389,7 +389,7 @@
                     </figcaption>
                   </figure>
                 </div>
-                <div class="portfolio-item col-xl-4 col-lg-4 col-md-6 col-sm-6" data-type="mailings">
+                <div class="col-lg-4 col-md-6 col-12 portfolio-item" data-type="mailings">
                   <figure class="portfolio-item__figure" tabindex="0"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img MAILINGS">
                     <figcaption class="portfolio-item__figcaption text-center">
                       <h3 class="heading heading-5 portfolio-item-title">Strona MAILINGS</h3>
@@ -401,7 +401,7 @@
                     </figcaption>
                   </figure>
                 </div>
-                <div class="portfolio-item col-xl-4 col-lg-4 col-md-6 col-sm-6" data-type="spa">
+                <div class="col-lg-4 col-md-6 col-12 portfolio-item" data-type="spa">
                   <figure class="portfolio-item__figure" tabindex="0"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img SPA">
                     <figcaption class="portfolio-item__figcaption text-center">
                       <h3 class="heading heading-5 portfolio-item-title">Strona SPA</h3>
@@ -413,7 +413,7 @@
                     </figcaption>
                   </figure>
                 </div>
-                <div class="portfolio-item col-xl-4 col-lg-4 col-md-6 col-sm-6" data-type="api">
+                <div class="col-lg-4 col-md-6 col-12 portfolio-item" data-type="api">
                   <figure class="portfolio-item__figure" tabindex="0"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img API">
                     <figcaption class="portfolio-item__figcaption text-center">
                       <h3 class="heading heading-5 portfolio-item-title">Strona API</h3>
@@ -445,7 +445,7 @@
             </header>
           </div>
           <div class="row">
-            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-8">
+            <div class="col-md-8 col-12">
               <div class="white-frame white-frame-0525001 contact-form-wrapper">
                 <form class="contact-form__form contact-form-js" action="#" autocomplete="off" method="post" name="contactForm">
                   <h3 class="heading heading-4 contact-form-title text-center">Formularz kontaktowy</h3>
@@ -469,7 +469,7 @@
                 </form>
               </div>
             </div>
-            <div class="col-12 col-sm-4">
+            <div class="col-md-4 col-12">
               <div class="contact-info-wrapper">
                 <ul class="contact-info__list">
                   <li class="info-block">
@@ -495,7 +495,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-4">
-            <h3 class="heading heading-5 white text-center">Polecane projekty</h3>
+            <h3 class="heading heading-5 main-footer-col-title text-center">Polecane projekty</h3>
             <div class="heading-separator">
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
@@ -508,7 +508,7 @@
             </ul>
           </div>
           <div class="col-12 col-md-4">
-            <h3 class="heading heading-5 white text-center">Ostatnie zmiany</h3>
+            <h3 class="heading heading-5 main-footer-col-title text-center">Ostatnie zmiany</h3>
             <div class="heading-separator">
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
@@ -521,14 +521,14 @@
             </ul>
           </div>
           <div class="col-12 col-md-4 row no-gutters flex-column">
-            <h3 class="heading heading-5 white text-center">Znajdź mnie</h3>
+            <h3 class="heading heading-5 main-footer-col-title text-center">Znajdź mnie</h3>
             <div class="heading-separator">
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
-            <div class="row align-content-center align-items-center justify-content-center main-footer__findme-body"><a class="btn btn-square to-top btn-codepen color-white" href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label="Przejdź do Codepen Mateusz Archiciński"><span class="icon icon-codepen" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-facebook color-white" href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label="Przejdź do Facebook Mateusz Archiciński"><span class="icon icon-facebook" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-github color-white" href="https://github.com/mateuszarchicinski" target="_blank" aria-label="Przejdź do Github Mateusz Archiciński"><span class="icon icon-github" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-gplus color-white" href="https://plus.google.com/111077912668591105452" target="_blank" aria-label="Przejdź do Google+ Mateusz Archiciński"><span class="icon icon-gplus" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-linkedin color-white" href="https://pl.linkedin.com/in/mateuszarchicinski" target="_blank" aria-label="Przejdź do Linkedin Mateusz Archiciński"><span class="icon icon-linkedin" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-twitter color-white" href="https://twitter.com/marchicinski" target="_blank" aria-label="Przejdź do Twitter Mateusz Archiciński"><span class="icon icon-twitter" aria-hidden="true"></span></a></div>
+            <div class="row align-content-center align-items-center justify-content-center main-footer-findme-body"><a class="btn btn-square to-top btn-codepen color-white" href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label="Przejdź do Codepen Mateusz Archiciński"><span class="icon icon-codepen" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-facebook color-white" href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label="Przejdź do Facebook Mateusz Archiciński"><span class="icon icon-facebook" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-github color-white" href="https://github.com/mateuszarchicinski" target="_blank" aria-label="Przejdź do Github Mateusz Archiciński"><span class="icon icon-github" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-gplus color-white" href="https://plus.google.com/111077912668591105452" target="_blank" aria-label="Przejdź do Google+ Mateusz Archiciński"><span class="icon icon-gplus" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-linkedin color-white" href="https://pl.linkedin.com/in/mateuszarchicinski" target="_blank" aria-label="Przejdź do Linkedin Mateusz Archiciński"><span class="icon icon-linkedin" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-twitter color-white" href="https://twitter.com/marchicinski" target="_blank" aria-label="Przejdź do Twitter Mateusz Archiciński"><span class="icon icon-twitter" aria-hidden="true"></span></a></div>
           </div>
           <div class="col-12">
-            <p class="main-footer__copyright"><small>&#169; 2015 - 2017 Mateusz Archiciński - Wszelkie prawa zastrzeżone</small></p>
+            <p class="main-footer-copyright"><small>&#169; 2015 - 2017 Mateusz Archiciński - Wszelkie prawa zastrzeżone</small></p>
           </div>
         </div>
       </div>
