WO|O|pug-scss-js|main-header&related components

--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -55,9 +55,9 @@
   </head>
   <body>
     <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.</p><![endif]-->
-    <header class="main-header main-header-js">
+    <header class="main-header main-header-embedded main-header-js">
       <div class="container">
-        <div class="row no-gutters align-items-center justify-content-between"><a class="site-logo__wrapper" href="/"><img class="site-logo__img" src="images/logo/logo.png" alt="#MA - Logo strony internetowej" width="94" height="28"></a>
+        <div class="row no-gutters align-items-center justify-content-between"><a class="site-logo-wrapper" href="/"><img class="site-logo__img" src="images/logo/logo.png" alt="#MA - Logo strony internetowej" width="94" height="28"></a>
           <h1 class="text-hidden">#Mateusz Archiciński</h1>
           <button class="side-nav__button-toggle side-nav-toggle-js" aria-label="Side navigation toggle button"><span class="icon icon-2 icon-menu color-white"></span></button>
           <nav class="site-nav-wrapper">
@@ -94,8 +94,8 @@
         </ul>
       </div>
     </nav>
-    <main class="main-wrapper">
-      <section class="section home-wrapper header-wrapper-js" id="home">
+    <main class="main-wrapper main-wrapper-js">
+      <section class="section home-wrapper" id="home">
         <div class="container">
           <div class="row align-items-center justify-content-center home-row">
             <header class="home-header">
@@ -138,7 +138,7 @@
                 </header>
                 <div class="about-me-section-body">
                   <p class="text-bolded text-justify paragraph beginning">Cześć! Mam na imię Mateusz. Zajmuję się tworzeniem nowoczesnych stron internetowych w oparciu o technologie HTML, CSS i JavaScript.</p>
-                  <p class="text-justify paragraph">Swoją karierę zawodową powiązaną z zawodem Front-End Developera rozpocząłem na stanowisku Web Content Editora w jednej z Warszawskich korporacji interaktywnych. Wspomniane stanowisko umożliwiło mi wzięcie udziału w wielu ciekawych projektach/kampaniach prowadzonych dla różnych klientów z rynku Polskiego i zagranicznego. Miałem przyjemność poznać ciekawych ludzi i wiele się nauczyć.</p>
+                  <p class="text-justify paragraph">Swoją karierę zawodową powiązaną z zawodem Front-End Developera rozpocząłem na stanowisku Web Content Editora w jednej z Warszawskich korporacji interaktywnych. Wspomniane stanowisko umożliwiło mi wzięcie udziału w wielu ciekawych projektach/kampaniach prowadzonych dla różnych klientów z rynku polskiego i zagranicznego. Miałem przyjemność poznać ciekawych ludzi i wiele się nauczyć.</p>
                   <p class="text-justify paragraph ending">Obecnie ponownie szukam zatrudnienia na stałe lub zdalnie w zależności od potrzeb klienta. Jeżeli jesteś zainteresowany/a współpraca skontaktuj się ze mną!</p>
                 </div>
               </div>
@@ -525,7 +525,7 @@
             <div class="heading-separator">
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
-            <div class="row align-content-center align-items-center justify-content-center main-footer-findme-body"><a class="btn btn-square to-top btn-codepen color-white" href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label="Przejdź do Codepen Mateusz Archiciński"><span class="icon icon-codepen" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-facebook color-white" href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label="Przejdź do Facebook Mateusz Archiciński"><span class="icon icon-facebook" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-github color-white" href="https://github.com/mateuszarchicinski" target="_blank" aria-label="Przejdź do Github Mateusz Archiciński"><span class="icon icon-github" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-gplus color-white" href="https://plus.google.com/111077912668591105452" target="_blank" aria-label="Przejdź do Google+ Mateusz Archiciński"><span class="icon icon-gplus" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-linkedin color-white" href="https://pl.linkedin.com/in/mateuszarchicinski" target="_blank" aria-label="Przejdź do Linkedin Mateusz Archiciński"><span class="icon icon-linkedin" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-twitter color-white" href="https://twitter.com/marchicinski" target="_blank" aria-label="Przejdź do Twitter Mateusz Archiciński"><span class="icon icon-twitter" aria-hidden="true"></span></a></div>
+            <div class="row align-content-center align-items-center justify-content-center main-footer-findme-body"><a class="btn btn-square btn-square-48 to-top btn-codepen color-white" href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label="Przejdź do Codepen Mateusz Archiciński"><span class="icon icon-codepen" aria-hidden="true"></span></a><a class="btn btn-square btn-square-48 to-top btn-facebook color-white" href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label="Przejdź do Facebook Mateusz Archiciński"><span class="icon icon-facebook" aria-hidden="true"></span></a><a class="btn btn-square btn-square-48 to-top btn-github color-white" href="https://github.com/mateuszarchicinski" target="_blank" aria-label="Przejdź do Github Mateusz Archiciński"><span class="icon icon-github" aria-hidden="true"></span></a><a class="btn btn-square btn-square-48 to-top btn-gplus color-white" href="https://plus.google.com/111077912668591105452" target="_blank" aria-label="Przejdź do Google+ Mateusz Archiciński"><span class="icon icon-gplus" aria-hidden="true"></span></a><a class="btn btn-square btn-square-48 to-top btn-linkedin color-white" href="https://pl.linkedin.com/in/mateuszarchicinski" target="_blank" aria-label="Przejdź do Linkedin Mateusz Archiciński"><span class="icon icon-linkedin" aria-hidden="true"></span></a><a class="btn btn-square btn-square-48 to-top btn-twitter color-white" href="https://twitter.com/marchicinski" target="_blank" aria-label="Przejdź do Twitter Mateusz Archiciński"><span class="icon icon-twitter" aria-hidden="true"></span></a></div>
           </div>
           <div class="col-12">
             <p class="main-footer-copyright"><small>&#169; 2015 - 2017 Mateusz Archiciński - Wszelkie prawa zastrzeżone</small></p>
