WO|O-RE|pug-scss-js|all components with all related files-part 2

--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -361,7 +361,7 @@
             <div class="col-12">
               <ul class="row align-content-center justify-content-center portfolio-filters__list portfolio-filters-js">
                 <li>
-                  <button class="btn portfolio-filters__button active" data-filter-type="all"><span>Wszystko</span></button>
+                  <button class="btn portfolio-filters__button active" data-filter-type><span>Wszystko</span></button>
                 </li>
                 <li>
                   <button class="btn portfolio-filters__button" data-filter-type="websites"><span>Strony internetowe</span></button>
@@ -378,52 +378,52 @@
               </ul>
               <div class="row portfolio-items portfolio-items-js">
                 <div class="col-lg-4 col-md-6 col-12 portfolio-item" data-type="websites">
-                  <figure class="portfolio-item__figure" tabindex="0"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img WEBSITE">
-                    <figcaption class="portfolio-item__figcaption text-center">
-                      <h3 class="heading heading-5 portfolio-item-title">Strona WEBSITE</h3>
+                  <div class="single-project-wrapper" tabindex="0"><img class="single-project__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img WEBSITE">
+                    <div class="single-project-content text-center" aria-hidden="false">
+                      <h3 class="heading heading-5 single-project-title">Strona WEBSITE</h3>
                       <div class="heading-separator">
                         <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
                       </div>
-                      <p class="paragraph ending portfolio-item-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                      <div class="portfolio-item-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
-                    </figcaption>
-                  </figure>
+                      <p class="paragraph ending single-project-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                      <div class="single-project-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12 portfolio-item" data-type="mailings">
-                  <figure class="portfolio-item__figure" tabindex="0"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img MAILINGS">
-                    <figcaption class="portfolio-item__figcaption text-center">
-                      <h3 class="heading heading-5 portfolio-item-title">Strona MAILINGS</h3>
+                  <div class="single-project-wrapper" tabindex="0"><img class="single-project__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img MAILINGS">
+                    <div class="single-project-content text-center" aria-hidden="false">
+                      <h3 class="heading heading-5 single-project-title">Strona MAILINGS</h3>
                       <div class="heading-separator">
                         <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
                       </div>
-                      <p class="paragraph ending portfolio-item-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                      <div class="portfolio-item-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
-                    </figcaption>
-                  </figure>
+                      <p class="paragraph ending single-project-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                      <div class="single-project-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12 portfolio-item" data-type="spa">
-                  <figure class="portfolio-item__figure" tabindex="0"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img SPA">
-                    <figcaption class="portfolio-item__figcaption text-center">
-                      <h3 class="heading heading-5 portfolio-item-title">Strona SPA</h3>
+                  <div class="single-project-wrapper" tabindex="0"><img class="single-project__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img SPA">
+                    <div class="single-project-content text-center" aria-hidden="false">
+                      <h3 class="heading heading-5 single-project-title">Strona SPA</h3>
                       <div class="heading-separator">
                         <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
                       </div>
-                      <p class="paragraph ending portfolio-item-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                      <div class="portfolio-item-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
-                    </figcaption>
-                  </figure>
+                      <p class="paragraph ending single-project-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                      <div class="single-project-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12 portfolio-item" data-type="api">
-                  <figure class="portfolio-item__figure" tabindex="0"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img API">
-                    <figcaption class="portfolio-item__figcaption text-center">
-                      <h3 class="heading heading-5 portfolio-item-title">Strona API</h3>
+                  <div class="single-project-wrapper" tabindex="0"><img class="single-project__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img API">
+                    <div class="single-project-content text-center" aria-hidden="false">
+                      <h3 class="heading heading-5 single-project-title">Strona API</h3>
                       <div class="heading-separator">
                         <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
                       </div>
-                      <p class="paragraph ending portfolio-item-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                      <div class="portfolio-item-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
-                    </figcaption>
-                  </figure>
+                      <p class="paragraph ending single-project-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                      <div class="single-project-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
